--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "TelegramChat",
-  "description": "Bot anonymous chat.",
-  "repository": "https://github.com/kenkansaja/TelegramChat",
+  "description": "RandomChatBot.",
+  "repository": "https://github.com/jamalnggau1/Jamalnggauchat",
   "logo": "https://telegra.ph/file/de3e9d2a021c2ac516b12.jpg",
   "env": {
     "TOKEN": {
