--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
-  "name": "TelegramChat",
+  "name": "TelegramChatBot",
   "description": "RandomChatBot.",
   "repository": "https://github.com/jamalnggau1/Jamalnggauchat",
   "logo": "https://telegra.ph/file/de3e9d2a021c2ac516b12.jpg",
   "env": {
     "TOKEN": {
-      "description": "Dapatkan di @botfather",
+      "description": "1990723274:AAHW1n_DkERFjKvxhoY0U0J6g79CDgOPcMU",
       "value": ""
     },
     "OWNER": {
